# htmlens

./: .gitignore  AGENTS.md  AI_READINESS_PLAN.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md  agents.md  test_runner.sh
.cargo/: config.toml
.github/workflows/: release.yml
crates/htmlens-cli/: Cargo.toml  README.md
crates/htmlens-cli/src/: lib.rs  main.rs
crates/htmlens-cli/tests/: integration.rs
crates/htmlens-core/: Cargo.toml  README.md
crates/htmlens-core/src/: graph.rs  lib.rs  parser.rs  types.rs  url_utils.rs
crates/htmlens-core/src/ai_readiness/: mcp_manifest.rs  mod.rs  openapi.rs  plugin_manifest.rs  robots_txt.rs  semantic_html.rs  sitemap.rs  well_known.rs
crates/htmlens-worker/: .gitignore  CLOUDFLARE_AI.md  Cargo.toml  README.md  package.json  wrangler.toml
crates/htmlens-worker/.cargo/: config.toml
crates/htmlens-worker/src/: frontend.html  lib.rs  tests.rs
src/: ld_graph.rs  main.rs  parser.rs
tests/fixtures/: direct_product.json  no_jsonld.html  product.html  product_group.html
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
