[package]
name = "htmlens"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
html2md = "0.2"
json-ld = { version = "0.17.2", features = ["reqwest"] }
iref = "3.2"
json-syntax = "0.12"
rdf-types = "0.22"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7", features = ["v4"] }
url = "2.5"
once_cell = "1.18"
regex = "1.10"
