[workspace]
members = [
    "crates/htmlens-core",
    "crates/htmlens-cli",
    "crates/htmlens-worker",
]
resolver = "2"

[workspace.package]
version = "0.4.4"
edition = "2024"
license = "MIT"
authors = ["Pon Datalab"]
repository = "https://github.com/pondevelopment/htmlens"
homepage = "https://github.com/pondevelopment/htmlens"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
regex = "1.10"
once_cell = "1.18"
uuid = { version = "1.7", features = ["v4"] }

htmlens-core = { path = "crates/htmlens-core" }
