[package]
name = "htmlens-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cloudflare Worker for htmlens - lightweight JSON-LD extraction API"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use core library with ai-readiness feature for Phase 1 & 2 checks
htmlens-core = { workspace = true, features = ["ai-readiness"] }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

# Cloudflare Workers SDK
worker = "0.6"
console_error_panic_hook = "0.1"
urlencoding = "2.1"

# WASM-specific: getrandom is pulled in by ahash (from scraper via htmlens-core)
# We need to enable the wasm_js feature for WASM targets
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
